@@ -1,4 +1,7 @@
-﻿[B]1.5.6[/B]
+﻿[B]1.5.7[/B]
+- Netmozi esetén nem kötelező a bejelentkezés
+
+[B]1.5.6[/B]
 - Netmozi forrás változás követése
 
 [B]1.5.5[/B]
